# Assentagro

./: .gitignore  README.md  index.html  installer.iss  null  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.json  settings.local.json
collector/: Cargo.toml  installer.iss  installer.nsi
collector/src/: main.rs
docs/: roadmap-itam-slides.html
docs/superpowers/plans/: 2026-03-27-enterprise-security.md
n8n/: workflow-desligamento.json
ocs-sync/: config.json  instalar-tarefa.ps1  sync.py  testar-conexao.py
scripts/: assetagro_mysql_data.sql  deploy-update.ps1  export_sqlite_to_mysql.py  install-update-server.ps1  migration_010_loans_notes.sql  mysql_schema.sql  update-server.ps1
src/: App.tsx  index.css  main.tsx  splash.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: connection.rs  migrations.rs  models.rs  queries.rs
src-tauri/src/db/migrations/: 001_schema.sql  002_seed.sql  003_model_year.sql  004_movements.sql  005_app_settings.sql  006_employees_maintenance.sql  007_unique_tag_training.sql  008_warranty_attachments.sql  009_users.sql
src/data/: commands.ts
src/domain/: constants.ts  models.ts  validators.ts
src/hooks/: useKeyboardShortcuts.ts  useNotifications.ts  useRBAC.ts  useSessionTimeout.ts  useUpdater.ts
src/i18n/: en.ts  index.ts  pt-BR.ts
src/lib/: utils.ts
src/stores/: useAppStore.ts  useAuthStore.ts  useFilterStore.ts  useThemeStore.ts
(+78 files in other folders)
