[package]
name = "assetagro"
version = "0.9.1"
edition = "2021"
description = "Gestão de ativos de TI para filiais — Tracbel Agro"

[lib]
name = "assetagro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell    = "2"
tauri-plugin-dialog   = "2"
tauri-plugin-fs       = "2"
tauri-plugin-updater  = "2"
tauri-plugin-process  = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
mysql             = "25"
chrono            = { version = "0.4", features = ["serde"] }
thiserror         = "2"
anyhow            = "1"
log               = "0.4"
env_logger        = "0.11"
uuid              = { version = "1", features = ["v4"] }
bcrypt            = "0.17"
